--- a/app/src/main/res/layout/goal_sheet_list.xml
+++ b/app/src/main/res/layout/goal_sheet_list.xml
@@ -1,33 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:clickable="true"
-    android:paddingBottom="8dp"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="8dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/goal_fab.sheet_list.layout"
+    android:orientation="vertical">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/img_icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/bg_pattern_1"
-        android:layout_centerVertical="true"
-        app:civ_border="false"
-        app:civ_shadow="true"
-        app:civ_shadow_radius="10"
-        app:civ_shadow_color="#929c86"
-        />
-
-    <TextView
-        android:id="@+id/txt_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/img_icon"
-        android:text="NO_DATA" />
-
-</RelativeLayout>
+</LinearLayout>
