--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -76,9 +76,13 @@
                     android:minWidth="240dp"
                     android:orientation="vertical">
 
-                    <include
-                        android:id="@+id/goal_fab.sheet_list"
-                        layout="@layout/goal_sheet_list" />
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/goal_fab.sheet_list.layout"
+                        android:orientation="vertical">
+
+                    </LinearLayout>
 
                     <RelativeLayout
                         android:id="@+id/goal_fab.add_layout"
@@ -130,9 +134,5 @@
         </io.codetail.widget.RevealFrameLayout>
 
     </RelativeLayout>
-    
-
-
-
 
 </android.support.design.widget.CoordinatorLayout>
