--- a/app/src/main/res/layout/app_bar_content_goal.xml
+++ b/app/src/main/res/layout/app_bar_content_goal.xml
@@ -26,11 +26,15 @@
 
     <include layout="@layout/content_goal" />
 
-    <TextView
-        android:layout_width="match_parent"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/goal_fab"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="STATUS"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_gravity="bottom|end"
-        android:id="@+id/OutPutText" />
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_check_white_24dp"
+        />
 
 </android.support.design.widget.CoordinatorLayout>
