--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -103,10 +103,10 @@
                                 android:layout_centerHorizontal="true"
                                 app:civ_border="true"
                                 app:civ_border_color="@color/colorAccent"
+                                app:civ_shadow="false"
                                 />
 
                         </RelativeLayout>
-
 
                         <TextView
                             android:id="@+id/goal_fab.addtext"
