--- a/app/src/main/res/layout/goal_sheet.xml
+++ b/app/src/main/res/layout/goal_sheet.xml
@@ -11,17 +11,25 @@
     android:paddingTop="8dp"
     android:id="@+id/goal_fab.sheet.layout">
 
-    <com.mikhaellopez.circularimageview.CircularImageView
-        android:id="@+id/goal_fab.sheet_list.icon"
+    <RelativeLayout
+        android:id="@+id/goal_fab.sheet_list.icon.layout"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/bg_pattern_1"
-        android:layout_centerVertical="true"
-        app:civ_border="false"
-        app:civ_shadow="true"
-        app:civ_shadow_radius="10"
-        app:civ_shadow_color="#929c86"
-        />
+        android:layout_centerVertical="true">
+
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/goal_fab.sheet_list.icon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/bg_pattern_1"
+            app:civ_border="false"
+            app:civ_shadow="false"
+            />
+
+    </RelativeLayout>
+
 
     <TextView
         android:id="@+id/goal_fab.sheet_list.text"
@@ -29,7 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
-        android:layout_toRightOf="@id/goal_fab.sheet_list.icon"
+        android:layout_toRightOf="@id/goal_fab.sheet_list.icon.layout"
         android:text="NO_DATA" />
 
 </RelativeLayout>
