--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,36 +7,17 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    
-
 
     <style name="AppTheme.Day">
-
-        <!--<item name="android:colorBackground">@color/background_floating_material_light</item>-->
-        <!--<item name="android:colorBackgroundCacheHint">@null</item>-->
-
-        <!--<item name="android:windowFrame">@null</item>-->
-        <!--<item name="android:windowTitleStyle">@style/TextAppearance.AppCompat.Widget.ActionBar.Title</item>-->
-        <!--<item name="android:windowTitleBackgroundStyle">@style/Base.DialogWindowTitleBackground.AppCompat</item>-->
         <item name="android:windowBackground">@drawable/empty</item>
         <item name="android:windowIsFloating">true</item>
-        <!--<item name="android:backgroundDimEnabled">true</item>-->
-        <!--<item name="android:windowContentOverlay">@null</item>-->
-        <!--<item name="android:windowAnimationStyle">@style/Animation.AppCompat.Dialog</item>-->
-        <!--<item name="android:windowSoftInputMode">stateUnspecified|adjustPan</item>-->
-
-        <!--<item name="windowActionBar">true</item>-->
-        <!--<item name="windowActionModeOverlay">true</item>-->
-
-        <!--<item name="listPreferredItemPaddingLeft">24dip</item>-->
-        <!--<item name="listPreferredItemPaddingRight">24dip</item>-->
-
-        <!--<item name="android:listDivider">@null</item>-->
-        
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <style name="AppTheme.PopupOverlay" parent="Theme.AppCompat.Light.DarkActionBar" />
+    <style name="AppTheme.NavHeader" >
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
 
     <style name="CollapsingTextAppearance" parent="Base.TextAppearance.AppCompat.Widget.ActionBar.Title"/>
     <style name="CollapsingTextAppearance.Inverse" >
