--- a/app/src/main/res/layout/calendar_vertical_cardview.xml
+++ b/app/src/main/res/layout/calendar_vertical_cardview.xml
@@ -9,10 +9,10 @@
         android:id="@+id/calendar_vertical.recyclerview.cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/size_16dp"
-        android:layout_marginRight="@dimen/size_16dp"
+        android:layout_marginLeft="@dimen/cardview_sidepadding"
+        android:layout_marginRight="@dimen/cardview_sidepadding"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         card_view:cardCornerRadius="4dp">
         <TextView
             android:id="@+id/status_textview"
