--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,10 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
 
-    <dimen name="size_16dp">16dp</dimen>
+    <dimen name="cardview_sidepadding">8dp</dimen>
+
+    <dimen name="calendarmonthcolumn_minheight">100dp</dimen>
+    <dimen name="calendarmonthcolumn_textsize">10sp</dimen>
 
     <dimen name="fab_margin">16dp</dimen>
 
@@ -17,4 +20,5 @@
 
     <dimen name="month_fontsize">8dp</dimen>
 
+    <dimen name="size_3dp">3dp</dimen>
 </resources>
