--- a/app/src/main/res/layout/content_goal.xml
+++ b/app/src/main/res/layout/content_goal.xml
@@ -5,6 +5,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_content_goal"
     >
