--- a/app/src/main/res/layout/goal_input_form.xml
+++ b/app/src/main/res/layout/goal_input_form.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:padding="8dp"
     android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
@@ -10,18 +10,7 @@
         android:layout_height="wrap_content">
 
         <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Goal Title"
-            android:textSize="56sp" />
-
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
+            android:id="@+id/goal_input_form.description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Description"
