--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -56,7 +56,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            >
 
             <android.support.v7.widget.CardView
                 android:id="@+id/goal_fab.sheet"
@@ -64,13 +65,15 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:visibility="invisible"
-                app:cardElevation="2dp">
+                app:cardElevation="2dp"
+                >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:minWidth="240dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    >
 
                     <LinearLayout
                         android:layout_width="wrap_content"
