--- a/app/src/main/res/layout/goal_sheet.xml
+++ b/app/src/main/res/layout/goal_sheet.xml
@@ -30,7 +30,6 @@
 
     </RelativeLayout>
 
-
     <TextView
         android:id="@+id/goal_fab.sheet_list.text"
         android:layout_width="wrap_content"
@@ -38,13 +37,7 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
         android:layout_toRightOf="@id/goal_fab.sheet_list.icon.layout"
+        android:textColor="#000000"
         android:text="NO_DATA" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/goal_fab.sheet_list.id"
-        android:text="NO_DATA"
-        android:visibility="gone"/>
 
 </RelativeLayout>
