--- a/app/src/main/res/layout/goal_input_form.xml
+++ b/app/src/main/res/layout/goal_input_form.xml
@@ -2,19 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
     android:orientation="vertical">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp">
 
         <EditText
             android:id="@+id/goal_input_form.description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Description"
-            android:textSize="34sp" />
+            android:textSize="30sp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -34,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Start"
-                android:textSize="34sp"
+                android:textSize="30sp"
                 android:onClick="onClickEditTextTimePicker"/>
 
         </android.support.design.widget.TextInputLayout>
@@ -51,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:hint="End"
                 android:onClick="onClickEditTextTimePicker"
-                android:textSize="34sp" />
+                android:textSize="30sp" />
 
         </android.support.design.widget.TextInputLayout>
 
