--- a/app/src/main/res/layout/calendar_cardview.xml
+++ b/app/src/main/res/layout/calendar_cardview.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/cardview_sidepadding"
     android:layout_marginRight="@dimen/cardview_sidepadding"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="@dimen/cardview_sidepadding"
     android:layout_marginBottom="4dp"
     card_view:cardCornerRadius="4dp">
 
